cluster/apps/external-services/adminer/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: adminer
subsets:
  - addresses:
      - ip: 192.168.30.184
    ports:
      - name: http
        port: 8080
        protocol: TCP
